@@ -2,6 +2,8 @@
 
 ## [UNRELEASED]
 
+- Fixed an issue with the `InputValidate.disable()` method that caused a runtime warning. Thanks to @mhanf for reporting and @cs42 for proposing a fix. (#10)
+
 - `InputValidator.add_rule()` now composes validation rules rather than overwriting existing rules. (#14)
 
 - All check functions in `shiny_validate.check` are now public, improving discoverability via autocomplete. (@mhanf #16)
